fix: add missing shell property

--- a/.github/actions/version_bump/action.yml
+++ b/.github/actions/version_bump/action.yml
@@ -53,6 +53,7 @@ runs:
           git add .semver.yaml
           git commit -m "update .semver.yaml"
       - name: Document
+        shell: bash
         run: |-
           {
             echo "Versions numbers:"
