--- a/.github/actions/version_bump/action.yml
+++ b/.github/actions/version_bump/action.yml
@@ -25,34 +25,40 @@ outputs:
 runs:
   using: "composite"
   steps:
-      - name: Install semver-cli
+      - id: install
         shell: bash
         run: |-
+          echo "::group::Install tools"
           go install github.com/maykonlf/semver-cli/cmd/semver@latest
           echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
-      - name: Get current version
-        id: current
+          echo "::endgroup::"
+      - id: current
         shell: bash
         run: |-
+          echo "::group::Get current version"
           echo "CURRENT=$(semver get release)"
           echo "tag=$CURRENT" >> "$GITHUB_OUTPUT"
           echo "number=$(echo $CURRENT | sed 's/v//')" >> "$GITHUB_OUTPUT"
-      - name: Get next version
-        id: next
+          echo "::endgroup::"
+      - id: next
         shell: bash
         env:
           FLAG: ${{ inputs.release_type == 'patch' && 'release' || inputs.release_type}}
         run: |-
+          echo "::group::Get next version"
           semver up "$FLAG"
           echo "NEXT=$(semver get release)"
           echo "tag=$NEXT" >> "$GITHUB_OUTPUT"
           echo "number=$(echo $NEXT | sed 's/v//')" >> "$GITHUB_OUTPUT"
-      - name: Prepare commit
+          echo "::endgroup::"
+      - id: commit
         shell: bash
         run: |-
+          echo "::group::Create commit"
           git add .semver.yaml
           git commit -m "update .semver.yaml"
-      - name: Document
+          echo "::endgroup::"
+      - id: document
         shell: bash
         run: |-
           {
