--- a/.github/actions/version_bump/action.yml
+++ b/.github/actions/version_bump/action.yml
@@ -25,40 +25,34 @@ outputs:
 runs:
   using: "composite"
   steps:
-      - id: install
+      - name: Install semver-cli
         shell: bash
         run: |-
-          echo "::group::Install tools"
           go install github.com/maykonlf/semver-cli/cmd/semver@latest
           echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
-          echo "::endgroup::"
-      - id: current
+      - name: Get current version
+        id: current
         shell: bash
         run: |-
-          echo "::group::Get current version"
           echo "CURRENT=$(semver get release)"
           echo "tag=$CURRENT" >> "$GITHUB_OUTPUT"
           echo "number=$(echo $CURRENT | sed 's/v//')" >> "$GITHUB_OUTPUT"
-          echo "::endgroup::"
-      - id: next
+      - name: Get next version
+        id: next
         shell: bash
         env:
           FLAG: ${{ inputs.release_type == 'patch' && 'release' || inputs.release_type}}
         run: |-
-          echo "::group::Get next version"
           semver up "$FLAG"
           echo "NEXT=$(semver get release)"
           echo "tag=$NEXT" >> "$GITHUB_OUTPUT"
           echo "number=$(echo $NEXT | sed 's/v//')" >> "$GITHUB_OUTPUT"
-          echo "::endgroup::"
-      - id: commit
+      - name: Prepare commit
         shell: bash
         run: |-
-          echo "::group::Create commit"
           git add .semver.yaml
           git commit -m "update .semver.yaml"
-          echo "::endgroup::"
-      - id: document
+      - name: Document
         shell: bash
         run: |-
           {
