--- a/.github/actions/version_bump/action.yml
+++ b/.github/actions/version_bump/action.yml
@@ -12,16 +12,16 @@ inputs:
 outputs:
   current_tag:
     description: The version before any increments, with a tag prefix. (ex "v1.2.3")
-    value: ${{ steps.out.outputs.CURRENT_TAG }}
+    value: ${{ steps.current.outputs.tag }}
   current_number:
     description: The version before any increments. (ex "1.2.3")
-    value: ${{ steps.out.outputs.CURRENT_NUMBER }}
+    value: ${{ steps.current.outputs.number }}
   next_tag:
     description: The version after any increments, with a tag prefix. (ex "v1.2.3")
-    value: ${{ steps.out.outputs.NEXT_TAG }}
+    value: ${{ steps.next.outputs.tag }}
   next_number:
     description: The version after any increments. (ex "1.2.3")
-    value: ${{ steps.out.outputs.NEXT_NUMBER }}
+    value: ${{ steps.next.outputs.number }}
 runs:
   using: "composite"
   steps:
@@ -31,47 +31,35 @@ runs:
           go install github.com/maykonlf/semver-cli/cmd/semver@latest
           echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
       - name: Get current version
+        id: current
         shell: bash
         run: |-
           echo "CURRENT=$(semver get release)"
-          {
-            echo "CURRENT_TAG=$CURRENT"
-            echo "CURRENT_NUMBER=$(echo $CURRENT | sed 's/v//')"
-          } >> "$GITHUB_ENV"
+          echo "tag=$CURRENT" >> "$GITHUB_OUTPUT"
+          echo "number=$(echo $CURRENT | sed 's/v//')" >> "$GITHUB_OUTPUT"
       - name: Get next version
+        id: next
         shell: bash
         env:
           FLAG: ${{ inputs.release_type == 'patch' && 'release' || inputs.release_type}}
         run: |-
           semver up "$FLAG"
           echo "NEXT=$(semver get release)"
-          {
-            echo "NEXT_TAG=$NEXT"
-            echo "NEXT_NUMBER=$(echo $NEXT | sed 's/v//')"
-          } >> "$GITHUB_ENV"
+          echo "tag=$NEXT" >> "$GITHUB_OUTPUT"
+          echo "number=$(echo $NEXT | sed 's/v//')" >> "$GITHUB_OUTPUT"
       - name: Prepare commit
         shell: bash
         run: |-
           git add .semver.yaml
           git commit -m "update .semver.yaml"
-      - name: Prepare outputs
-        id: out
-        shell: bash
-        run: |-
-          {
-            echo "CURRENT_TAG=$CURRENT_TAG"
-            echo "CURRENT_NUMBER=$CURRENT_NUMBER"
-            echo "NEXT_TAG=$NEXT_TAG"
-            echo "NEXT_NUMBER=$NEXT_NUMBER"
-          } >> "$GITHUB_OUTPUT"
       - name: Document
         shell: bash
         run: |-
           {
             echo "Versions numbers:"
-            echo "Current: $CURRENT_TAG"
-            echo "Next: $CURRENT_NUMBER"
+            echo "Current: ${{ steps.current.outputs.number }}"
+            echo "Next: ${{ steps.next.outputs.number }}"
             echo "Versions tags:"
-            echo "Current: $NEXT_TAG"
-            echo "Next: $NEXT_NUMBER"
+            echo "Current: ${{ steps.current.outputs.tag }}"
+            echo "Next: ${{ steps.next.outputs.tag }}"
           } >> "$GITHUB_STEP_SUMMARY"
